fixed flex spacing of hero nav items on front page

--- a/css/components/fp-hero.css
+++ b/css/components/fp-hero.css
@@ -236,8 +236,13 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    justify-content: center;
     
     width: 100%;
+
+    @mixin tabPort {
+      justify-content: space-around;
+    }
   }
 
   &__nav-item{
